# Robotics

./: .gitignore  LICENSE  README.md  SAC_simple_RL_agent  readme.md
SAC_simple/: agent.py
SAC_simple_RL/: buffer.py  env.py  networks.py  readme.md  train.py
monocular_slam_vo_ros/: .gitignore  readme.md
monocular_slam_vo_ros/ros2_ws/install/: local_setup.sh  setup.sh
monocular_slam_vo_ros/ros2_ws/install/slam_ros2/include/slam_ros2/: slam_processor.hpp  types.hpp
monocular_slam_vo_ros/ros2_ws/install/slam_ros2/lib/slam_ros2/: slam_node  video_publisher_node
monocular_slam_vo_ros/ros2_ws/install/slam_ros2/share/ament_index/resource_index/package_run_dependencies/: slam_ros2
monocular_slam_vo_ros/ros2_ws/install/slam_ros2/share/ament_index/resource_index/parent_prefix_path/: slam_ros2
monocular_slam_vo_ros/ros2_ws/install/slam_ros2/share/slam_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
monocular_slam_vo_ros/ros2_ws/install/slam_ros2/share/slam_ros2/cmake/: slam_ros2Config-version.cmake  slam_ros2Config.cmake
monocular_slam_vo_ros/ros2_ws/install/slam_ros2/share/slam_ros2/environment/: ament_prefix_path.dsv  path.dsv
monocular_slam_vo_ros/ros2_ws/install/slam_ros2/share/slam_ros2/launch/: slam.launch.py
monocular_slam_vo_ros/ros2_ws/install/slam_ros2/share/slam_ros2/rviz/: slam.rviz
monocular_slam_vo_ros/ros2_ws/log/: latest_build
monocular_slam_vo_ros/ros2_ws/src/slam_ros2/: CMakeLists.txt
monocular_slam_vo_ros/ros2_ws/src/slam_ros2/include/slam_ros2/: slam_processor.hpp
monocular_slam_vo_ros/ros2_ws/src/slam_ros2/launch/: slam.launch.py
monocular_slam_vo_ros/ros2_ws/src/slam_ros2/src/: map.cpp  slam_node.cpp  slam_processor.cpp  video_publisher_node.cpp
ros1_noetic_ros2_humble_coexistence/: readme.md
ros2_vlm/: readme.md
ros_tracking_package/: readme.md
ros_tracking_package/ros2_ws/src/sim_cam_pkg/: .dockerignore  CMakeLists.txt  Dockerfile  docker-entrypoint.sh  package.xml
ros_tracking_package/ros2_ws/src/sim_cam_pkg/launch/: object_tracking_pipeline.launch.py
ros_tracking_package/ros2_ws/src/sim_cam_pkg/msg/: Detection.msg  DetectionArray.msg  TrackedObject.msg  TrackedObjectArray.msg  TrackingReset.msg
ros_tracking_package/ros2_ws/src/sim_cam_pkg/nodes/: object_detector_node.py
ros_tracking_package/ros2_ws/src/sim_cam_pkg/src/: image_subscriber_node.cpp  object_tracker_node.cpp  simulated_camera_node.cpp  visualization_node.cpp
